[tool.poetry]
name = "dissonare-traffic"
version = "0.1.0"
description = ""
authors = ["YarBurArt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.36.3"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
fastapi = "^0.109.2"
python-multipart = {git = "https://github.com/andrew-d/python-multipart.git"}
pylint = "^3.0.3"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
